@@ -1,0 +1,2 @@
+&lt;?= &quot;Hello World&quot; ?&gt;
+
