@@ -38,19 +38,19 @@ if { [llength $errlist] != 0 } {
       &lt;tbody&gt;
         &lt;tr&gt;
           &lt;td&gt;&lt;b&gt;Title:&lt;/b&gt;&lt;/td&gt;
-          &lt;td&gt;&lt;? puts $title ?&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;?= $title ?&gt;&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
           &lt;td&gt;&lt;b&gt;Boss:&lt;/b&gt;&lt;/td&gt;
-          &lt;td&gt;&lt;? puts $boss ?&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;?= $boss ?&gt;&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
           &lt;td&gt;&lt;b&gt;Salary:&lt;/b&gt;&lt;/td&gt;
-          &lt;td&gt;&lt;? puts $salary ?&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;?= $salary ?&gt;&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
           &lt;td&gt;&lt;b&gt;Skills:&lt;/b&gt;&lt;/td&gt;
-          &lt;td&gt;&lt;? puts $skills ?&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;?= $skills ?&gt;&lt;/td&gt;
         &lt;/tr&gt;
       &lt;/tbody&gt;
     &lt;/table&gt;
